--- a/EmpyrionGalaxyNavigator/packages.config
+++ b/EmpyrionGalaxyNavigator/packages.config
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EmpyrionNetAPI" version="5.1.0" targetFramework="net461" />
-  <package id="ILMerge" version="2.13.0307" targetFramework="net461" />
+  <package id="EmpyrionNetAPI" version="6.0.5" targetFramework="net48" />
+  <package id="ILMerge" version="2.14.1208" targetFramework="net48" />
   <package id="MSBuild.ILMerge.Task" version="1.0.5" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net461" />
-  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
-  <package id="YamlDotNet" version="6.1.2" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
+  <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.115.5" targetFramework="net48" />
+  <package id="System.Data.SQLite.Core" version="1.0.115.5" targetFramework="net48" />
+  <package id="YamlDotNet" version="11.2.1" targetFramework="net48" />
 </packages>
