--- a/UnitTests/packages.config
+++ b/UnitTests/packages.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EmpyrionNetAPI" version="5.1.0" targetFramework="net461" />
-  <package id="MSTest.TestAdapter" version="1.3.2" targetFramework="net461" />
-  <package id="MSTest.TestFramework" version="1.3.2" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net461" />
-  <package id="YamlDotNet" version="6.1.2" targetFramework="net461" />
+  <package id="EmpyrionNetAPI" version="6.0.5" targetFramework="net48" />
+  <package id="MSTest.TestAdapter" version="2.2.8" targetFramework="net48" />
+  <package id="MSTest.TestFramework" version="2.2.8" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
+  <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.115.5" targetFramework="net48" />
+  <package id="System.Data.SQLite.Core" version="1.0.115.5" targetFramework="net48" />
+  <package id="YamlDotNet" version="11.2.1" targetFramework="net48" />
 </packages>
