--- a/EmpyrionGalaxyNavigatorDataAccess/EmpyrionGalaxyNavigatorDataAccess.csproj
+++ b/EmpyrionGalaxyNavigatorDataAccess/EmpyrionGalaxyNavigatorDataAccess.csproj
@@ -99,7 +99,6 @@
   </Target>
   <Import Project="..\packages\MSBuild.ILMerge.Task.1.1.3\build\MSBuild.ILMerge.Task.targets" Condition="Exists('..\packages\MSBuild.ILMerge.Task.1.1.3\build\MSBuild.ILMerge.Task.targets')" />
   <PropertyGroup>
-    <PostBuildEvent>xcopy "$(TargetDir)*.dll" "C:\steamcmd\empyrion\Saves\Games\DefaultRE\Mods\EmpyrionGalaxyNavigator" /Y
-xcopy "$(TargetDir)*.dll" "C:\steamcmd\empyrion\Content\Mods\ModLoader\MODs\EmpyrionGalaxyNavigator" /Y</PostBuildEvent>
+    <PostBuildEvent>xcopy "$(TargetDir)*.dll" "C:\steamcmd\empyrion\Saves\Games\DefaultRE\Mods\EmpyrionGalaxyNavigator" /Y</PostBuildEvent>
   </PropertyGroup>
 </Project>
